--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,2 +1,14 @@
 html {
+    --color-bg: #111b21;
+
+    --color-bg-1: #111b21;
+    --color-bg-2: #202c33;
+    --color-bg-3: #2a3942;
+
+    --color-accent: #008069;
+
+    --color-text-dark: #779683;
+    --color-text: #dcedd1;
+
+    --border-radius: 6px;
 }
