--- a/src/Layout/Layout.module.scss
+++ b/src/Layout/Layout.module.scss
@@ -1,6 +1,14 @@
 .Layout {
     & {
+        width: 100vw;
+        height: 100vh;
     }
     &__container {
+        width: 100%;
+        height: 100%;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
